# geoh5py

./: .codeclimate.yml  .coveragerc  .flake8  .gitattributes  .gitignore  .lift.toml  .pre-commit-ci-config.yaml  .pre-commit-config.yaml  .readthedocs.yml  .rstcheck.cfg  .travis.yml  README-dev.rst  README.md  README.rst  config-example.toml  description.rst  environment.yml  meta.yaml  package.rst  pixi.toml  pylintrc  pyproject.toml  readthedocs.yml  recipe.yaml  requirements.readthedocs.txt  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: check_jira_issue.yml  codeql-analysis.yml  issue_to_jira.yml  pr_add_jira_summary.yml  pytest-all-os.yml  pytest-unix-os.yml  pytest-windows.yml  python_analysis.yml  python_deploy_dev.yml  python_deploy_prod.yml  pythonpackage.yml  security_scan.yml  static-analysis.yml
conda/: meta.yaml
devtools/: check-copyright.py  git_message_hook.py  publish.py  pylint  pylint.bat
doc/: AUTHORS.rst  conf.py  index.rst  services-draft.txt  workspace.mdj
doc/source/: GeoH5.textile  conf.py  geoh5io.data.rst  geoh5io.groups.rst  geoh5io.handlers.rst  geoh5io.objects.rst  geoh5io.rst  index.rst  modules.rst  workspace.mdj
docs/: AUTHORS.rst  THIRD_PARTY_SOFTWARE.rst  _config.yml  _toc.yml  app.yaml  conf.py  environment.yml  index.rst  requirements.txt
docs/_ext/: Add2Build.py  __init__.py  autodoc.py  dynamic_config.py  edit_on_github.py  environmentSetup.py  fetch_gae_sdk.py  type_rewrites.py
docs/_static/: custom.css
docs/content/: Tutorial.rst  Tutorial_Basics.ipynb  geoh5_file_format.rst  geoh5_file_format.textile  installation.rst  my_project.geoh5  release_notes.rst
docs/source/: geoh5io.interfaces.rst  geoh5io.workspace.rst
docs/templates/: module.rst_t  package.rst_t  toc.rst_t
docs/tutorials/: Tutorial1_Basics.ipynb  Tutorial2_Automated_Lineament.ipynb  Tutorial3_Coordinate_Transformation.ipynb  Tutorial4_EM1D_inversion.ipynb  Tutorial5_Create_contours.ipynb  Tutorial6_Export_to_shapefile.ipynb  Tutorial7_GravMag_Inversion.ipynb  index.rst  simpegEM1D_inputs.json
examples/: EMAG_global_plot.ipynb  Geoh5py-test.ipynb  SimpleApp.py  SimpleClient.py  geoh5py_xarray_testing_and_back.ipynb  grid_save_out.nc  simple_app.py  simple_client.py
geoh5io/: CalculatorHandler.py  data_handler.py  groups_handler.py  objects_handler.py  workspace_handler.py
geoh5io/data/: Data.py  __init__.py  blob_data.py  color_map.py  color_map_entry.py  data.py  data_association_enum.py  data_type.py  data_unit.py  datetime_data.py  filename_data.py  float_data.py  integer_data.py  primitive_data_type.py  primitive_type_enum.py  reference_color_map_entry.py  reference_value_map.py  referenced_data.py  text_data.py  unknown_data.py  unkown_data.py
geoh5io/groups/: Group.py  __init__.py  container_group.py  custom_group.py  custom_group_type.py  drillhole_group.py  giftools_group.py  group.py  group_type.py  notype_group.py  property_group.py  root_group.py
geoh5io/handlers/: __init__.py  data_handler.py  groups_handler.py  objects_handler.py  workspace_handler.py
geoh5io/interfaces/: __init__.py  __init__.pyi  api.pyi  data.pyi  groups.pyi  objects.pyi  shared.pyi  tutorial.pyi  workspace.pyi
geoh5io/io/: __init__.py  h5_reader.py  h5_writer.py
geoh5io/objects/: Curve.py  Drillhole.py  __init__.py  block_model.py  cell.py  curve.py  drillhole.py  geo_image.py  grid2d.py  label.py  notype_object.py  object.py  object_base.py  object_type.py  octree.py  points.py  surface.py
geoh5io/shared/: __init__.py  coord3d.py  date_time.py  distance_unit.py  entity.py  entity_type.py  file_name.py  type.py  vertex_index.py  weakref_utils.py
geoh5io/workspace/: Workspace.py  __init__.py  root_group.py  workspace.py
geoh5py/: __init__.py  version.py  workspace.py
geoh5py/data/: __init__.py  blob_data.py  boolean_data.py  color_map.py  colour.py  data.py  data_association_enum.py  data_type.py  data_unit.py  datetime_data.py  filename_data.py  float_data.py  geometric_data.py  geometric_data_constants.py  integer_data.py  numeric_data.py  primitive_type_enum.py  reference_value_map.py  referenced_data.py  text_data.py  unknown_data.py  visual_parameters.py
geoh5py/groups/: __init__.py  base.py  container.py  container_group.py  custom.py  custom_group.py  drillhole.py  drillhole_group.py  giftools.py  giftools_group.py  group.py  group_type.py  integrator.py  integrator_group.py  interpretation_section.py  maps.py  maps_group.py  notype.py  notype_group.py  property_group.py  property_group_table.py  property_group_type.py  root.py  root_group.py  simpeg.py  simpeg_group.py  survey.py  survey_group.py  uijson.py  (+1 more)
grpc_tuto/: pyproject.toml
grpc_tuto/helloworld/: greeter_client.py  greeter_server.py
grpc_tuto/protos/: helloworld.proto
interfaces/: api.thrift  data.thrift  groups.thrift  objects.thrift  shared.thrift  tutorial.thrift  workspace.thrift
server/: Server.py  server.py
tests/: __init__.py  add_filename_data_test.py  block_model_test.py  boolean_test.py  clip_cell_data_test.py  clip_point_data_test.py  clip_vertex_data_test.py  color_map_test.py  conversion_base_test.py  coordinate_system_test.py  copy_entity_test.py  copy_extent_cell_data_test.py  copy_extent_vertex_data_test.py  copy_survey_dcip_test.py  coulour_test.py  create_block_model_test.py  create_curve_data_test.py  create_drape_model_test.py  create_drillhole_4_0_test.py  create_drillhole_data_test.py  create_drillhole_v4_0_test.py  create_entity_parent_test.py  create_geo_image_test.py  create_grid_2d_test.py  create_group_test.py  create_notype_test.py  create_octree_test.py  create_point_data_test.py  create_property_group_test.py  create_reference_data_test.py  create_surface_data_test.py  create_survey_base_em_test.py  create_survey_dcip_test.py  create_survey_mt_test.py  create_survey_tem_test.py  create_survey_tipper_test.py  create_survey_ztem_test.py  create_text_data_test.py  create_workspace_test.py  curve_data_test.py  (+73 more)
thrift_tutorial/: CalculatorHandler.py  Pipfile  PythonClient.py  PythonDirect.py  PythonServer.py
(+287 files in other folders)
