[build-system]
requires = [
  "poetry-core>=1.8.0",
  "poetry-dynamic-versioning>=1.9.1,<2.0",
  # list dependencies to work with PIP_NO_DEPS=1
  "MarkupSafe>=2.0",
  "dunamai>=1.25,<2.0",
  "jinja2>=3.0,<4.0",
  "packaging>=24.0",
  "tomlkit>=0.13",
]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "geoh5py"
requires-python = ">=3.10,<4.0"

description = "Python API for geoh5, an open file format for geoscientific data"
license = "LGPL-3.0-or-later"
keywords = ["geology", "geophysics", "data", "interoperability", "geoh5"]
readme = "package.rst"
dynamic = ["version", "classifiers"]
authors = [
    { name = "Mira Geoscience", email = "support@mirageoscience.com" }
]
maintainers = [
    { name = "Benjamin Kary", email = "benjamink@mirageoscience.com" },
    { name = "Dominique Fournier", email = "dominiquef@mirageoscience.com" },
    { name = "Matthieu Cedou", email = "matthieuc@mirageoscience.com" }
]

dependencies = [
    "h5py >= 3.2.1, == 3.*",
    "numpy == 1.26.*",
    "Pillow == 10.3.*",
    "pydantic >= 2.7, == 2.*"
]

[project.urls]
homepage = "https://www.mirageoscience.com/mining-industry-software/python-integration/"
repository = "https://github.com/MiraGeoscience/geoh5py"
documentation = "https://mirageoscience-geoh5py.readthedocs-hosted.com/"

[tool.poetry]
requires-poetry = '>=2.0,<3.0'

exclude = ["geoh5py/handlers/*", "geoh5py/interfaces/*"]

include = [
    { path = "COPYING" },
    { path = "COPYING.LESSER" },
    { path = "LICENSE" },
    { path = "README.rst" },
    { path = "THIRD_PARTY_SOFTWARE.rst" },
    { path = "docs/**/THIRD_PARTY_SOFTWARE.rst" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
version = "0.0.0.dev0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.9.1,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
bump = true
enable = true
fix-shallow-repository = true
strict = true
style = "pep440"
vcs = "git"

[tool.poetry-dynamic-versioning.substitution]
files = ["geoh5py/_version.py", "recipe.yaml"]
patterns = [
    { value = '''(^__version__\s*(?::.*?)?=\s*['"])[^'"]*(['"])''', mode = "str" },
    { value = '''(^\s*version\s*(?::.*?)?:\s*['"])[^'"]*(['"])''', mode = "str" },
]

[tool.poetry-dynamic-versioning.files."geoh5py/_version.py"]
persistent-substitution = true
initial-content = """
  # Version placeholder that will be replaced during substitution
  __version__ = "0.0.0"
"""

[tool.poetry-dynamic-versioning.files."recipe.yaml"]
persistent-substitution = true

[tool.pixi.project]
channels = ["https://repo.prefix.dev/conda-forge"]
platforms = ["win-64", "linux-64"]

[tool.pixi.dependencies]
# for pixi to resolve dependencies from conda
## direct dependencies:
#----------------------
h5py = ">=3.2.1, 3.*"
numpy = "1.26.*"
pillow = "10.3.*"
pydantic = ">=2.7, 2.*"

[tool.pixi.pypi-dependencies]
geoh5py = {path = ".", editable = true}

[tool.pixi.environments]
#prod-py310 = {features = ["py310"], solve-group = "prod-py310"}
#prod-py311 = {features = ["py311"], solve-group = "prod-py311"}
#prod-py312 = {features = ["py312"], solve-group = "prod-py312"}
#test-prod-py310 = {features = ["py310", "test"], solve-group = "prod-py310"}
#test-prod-py311 = {features = ["py311", "test"], solve-group = "prod-py311"}
#test-prod-py312 = {features = ["py312", "test"], solve-group = "prod-py312"}

py310 = {features = ["py310", "test"], solve-group = "default"}
py311 = {features = ["py311", "test"]}
py312 = {features = ["py312", "test"]}

default = {features = ["py310", "test", "dev"], solve-group = "default"}
docs = {features = ["py310", "doc"], solve-group = "default"}

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.dev.dependencies]
Pygments = '*'

[tool.pixi.feature.test.dependencies]
h5py = '*'
packaging = '*'
pylint = '*'
pytest = "*"
pytest-cov = "*"
pyyaml = '*'
scipy = '*'

[tool.pixi.feature.test.tasks]
test = "pytest --cov --cov-report=xml"

[tool.pixi.feature.test.tasks.test-local]
args = ["packages"]

depends-on = [
    {task = "use-local-deps", args = [ "{{ packages }}" ]},
    {task = "show-pip-source", args =  [ "{{ packages }}" ]},
    {task = "test"}
]

[tool.pixi.feature.doc.dependencies]
sphinx = "*"
sphinx-autodoc-typehints = "*"
sphinx-rtd-theme = "*"
sphinxcontrib-googleanalytics = '*'

[tool.pixi.feature.doc.tasks.build-docs]
args = [
  { arg = "builder",   default = "html" },
  { arg = "outputdir", default = "docs/_build" }
]
cmd = "sphinx-build -T -b {{builder}} docs {{outputdir}}"

[tool.pixi.tasks.test-pyvers]
depends-on = [
    {task = "test", environment = "py310"},
    {task = "test", environment = "py311"},
    {task = "test", environment = "py312"},
]

[tool.pixi.tasks.show-pip-source]
args = ["packages"]
cmd = "uv pip show {{packages}}"

[tool.pixi.tasks.use-local-deps]
args = ["packages"]
cmd = """
uv pip install --no-deps --force-reinstall \
{% for package in packages | split %} -e ../{{ package | trim }}{% endfor %}
"""

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
ignore = [
    "B028",  # no-explicit-stacklevel for warnings.warn()
    "E501",  # line-too-long - code is reformatted (do not care about comments and docstring)
    "F401",  # unsused-import - covered by pycln
    "TID252", # TODO
    "RUF012", # TODO
    "UP031", # TODO
    "UP038", # TODO
    "RUF001", # TODO
    "RUF003", # TODO
    "RUF005",  # collection-literal-concatenation - wrong suggestion with numpy arrays
    "RUF015", # TODO
    "B008", # TODO
    "B018", # TODO
    "B024", # TODO
    "B027", # TODO
    "E721", # TODO
    "C409", # TODO
]
select = [
    "A",  # flake8-builtins
    "B",  # flake8-bugbear
    "B006",  # Do not use mutable data structures for argument defaults
    "B9",  # flake8-bugbear opiniated warnings
    "BLE",  # flake8-blind-except
    "C4",  # flake8-comprehensions
    "C9",  # mccabe
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "RUF",  # ruff rules
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
    "W",  # pycodestyle warnings
]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
# default formatting is just fine

[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
scripts_are_modules = true
show_error_context = true
show_column_numbers = true
check_untyped_defs = true

plugins = [
#    "numpy.typing.mypy_plugin",
    "pydantic.mypy"
]

[tool.coverage.run]
branch = true
source = ["geoh5py"]
omit = [
    "geoh5py/handlers/*",
    "geoh5py/interfaces/*"
]

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "pass",
    "if TYPE_CHECKING",
    "pragma: no cover"
]

fail_under = 90

[tool.coverage.html]
skip_empty = true
skip_covered = true
